# ldaptor

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CONTRIBUTING.rst  INSTALL.txt  LICENSE  MANIFEST.in  NEWS  README  README.md  README.rst  SECURITY.md  TODO  codecov.yml  demo-webui-fi.tac  ldaptor.schema  pyproject.toml  requirements-dev.txt  requirements.txt  rfc2251-status.txt  setup-ldaptor-utils.py  setup-ldaptor-webui.py  setup-python-ldaptor.py  setup.cfg  setup.py  test-ldapserver.tac  test-webui.tac  tox.ini
.github/workflows/: main.yml  pypi-release.yml
admin/: apidoc  apidoc-upload  coverage.py  doctest-all.py  l10n-generate  l10n-update  nevow-xmlgettext  pycheck  python-test-coverage  run-twill  test-all.py  test-gui.py
debian/: .gitignore  changelog  control  copyright  generate-changelog  generate-control  global.cfg  ldaptor-common.install  ldaptor-doc.docs  ldaptor-doc.install  ldaptor-webui.examples  ldaptor-webui.install  postinst  prerm  python-ldaptor.README.Debian  python-ldaptor.install  rules
doc/: Makefile  addressbook-slides-server.tac  addressbook-slides.xml  chat-bind.dia  chat-bind.dot  chat-search-pipeline.dia  chat-search-pipeline.dot  chat-search.dot  chat-unbind.dot  htmldiff  ldap-intro.xml  ldap-is-a-tree.dia  ldap-is-a-tree.dot  ldapentry-vs-oo.xml  ldapfilter-as-tree.dot  overlay.js.patch  overview.dia  search-inputs.xml  slide-style.css  slides-driver.xsl  tags.j2h
doc/examples/: global.cfg  ldap_parallelsearch.py  ldif2ldif
doc/examples.webui/: global.cfg  ldaptor-twisted-web.py  webui.tac
doc/examples/addressbook/: README.txt
doc/examples/addressbook/01_repl/: session-01  session-02  session-04  session-05  session-06  session-08  summary
doc/examples/addressbook/02_script/: addressbook.py  summary
doc/examples/addressbook/server/: run  (+7 more)
doc/source/: conf.py  example-objectclass.rst  index.rst  ldap-intro.rst  ldapentry-vs-oo.rst  ldaptor.rst  modules.rst
docs/: Makefile  PULL_REQUEST_TEMPLATE.md
docs/examples/: ldif2ldif
docs/examples/addressbook/: README.txt
docs/source/: AUTHORS.rst  NEWS.rst  addressbook-example.rst  conf.py  cookbook.rst  glossary.rst  index.rst  ldap-intro.rst  ldaptor.protocols.ldap.autofill.rst  ldaptor.protocols.ldap.rst  ldaptor.protocols.rst  ldaptor.rst  ldaptor.samba.rst  quickstart.rst  search-inputs.rst  simple-app.rst  status.rst
docs/source/cookbook/: client_paged_search_results.py  clients.rst  ldap-proxy.rst  merger.rst  servers.rst
docs/source/examples/: __init__.py  client_add_ldap_entry.py  client_basic.py  client_paged_search_results.py  global.cfg  ldap_parallelsearch.py  ldaptor_basic.py  ldaptor_sqlalchemy.py  ldaptor_with_upn_bind.py  ldif2ldif  quickstart_client.py  quickstart_server.py  schema.py
examples/: ldap_parallelsearch.py
ldaptor/: U32.py  __init__.py  _encoder.py  attributeset.py  checkers.py  compat.py  config.py  cred.py  delta.py  dns.py  encoder.py  entry.py  entryhelpers.py  generate_password.py  gssapi.py  inmemory.py  insensitive.py  interfaces.py  ldapfilter.py  ldiftree.py  md4.py  mutablestring.py  numberalloc.py  schema.py  testutil.py  usage.py  weave.py
ldaptor/_scripts/: fetchschema.py  getfreenumber.py  ldap2dhcpconf.py  ldap2dnszones.py  ldap2maradns.py  ldap2passwd.py  ldap2pdns.py  ldifdiff.py  ldifpatch.py  namingcontexts.py  passwd.py  rename.py  search.py
ldaptor/apps/webui/: add-really.xhtml  add.py  add.xhtml  basedn.xhtml  change_password.py  change_password.xhtml  change_service_passwords.xhtml  config.py  defskin.py  delete-done.xhtml  delete-nodn.xhtml  delete.py  delete.xhtml  edit-really.xhtml  edit.py  edit.xhtml  gadget.py  htmlify.py  i18n.py  iwebui.py  ldaptor.css  login.py  login.xhtml  main.py  mass_change_password-really.xhtml  mass_change_password.py  mass_change_password.xhtml  move.py  move.xhtml  nevow_i18n.py  search.py  search.xhtml  skin-default.html  template.py  uriquote.py  util.py
ldaptor/protocols/: pureber.py  pureldap.py
ldaptor/protocols/ldap/: __init__.py  distinguishedname.py  fetchschema.py  ldapclient.py  ldapconnector.py  ldaperrors.py  ldapserver.py  ldapsyntax.py  ldif.py  ldifdelta.py  ldifprotocol.py  merger.py  proxy.py  proxybase.py  svcbindproxy.py
ldaptor/samba/: smbpassword.py
ldaptor/scripts/: find_server.py  getfreenumber.py  ldap2maradns.py
ldaptor/test/: __init__.py  mockweb.py  test_attributeset.py  test_autofill.py  test_autofill_posix.py  test_autofill_samba.py  test_bidirdict.py  test_config.py  test_connector.py  test_delta.py  test_distinguishedname.py  test_dns.py  test_encoder.py  test_entry.py  test_entry_diff.py  test_examples.py  test_fetchschema.py  test_inmemory.py  test_ldapclient.py  test_ldaperrors.py  test_ldapfilter.py  test_ldapsyntax.py  test_ldif.py  test_ldifdelta.py  test_ldifprotocol.py  test_ldiftree.py  test_match.py  test_merger.py  test_proxy.py  test_proxybase.py  test_pureber.py  test_pureldap.py  test_schema.py  test_server.py  test_smbpassword.py  test_svcbindproxy.py  test_usage.py  test_webui.py  util.py
ldaptor/test/web/: add-delete-lookingAtRemovedEntry.twill  add-delete.twill  add-fail-missingRequiredFields-retryWorks.twill  add-fail-missingRequiredFields.twill  add-move.twill  add-posixaccount.twill  delete-fail-baddn.twill  delete-fail-ldaperror.twill  delete-fail-nodn.twill  delete-nonleaf.twill  edit-missingMust.twill  edit-simple.twill  edit-textarea-emptiness.twill  frontpage-baddn.twill  frontpage.twill  move-cancel.twill  password-simple-others.twill  password-simple.twill  search-all.twill  search-broken-filter.twill  search.twill
lib/ldaptor/: U32.py  bidirdict.py  generate_password.py  md4.py  mutablestring.py  numberalloc.py  usage.py
lib/ldaptor/protocols/: pureber.py  pureldap.py
lib/ldaptor/samba/: smbpassword.py
lib/ldaptor/twisted/: ldap.py
po/: ldaptor-webui.pot
po/ldaptor-webui/: fi.po  fr.po
tests/: all.py  gui.py  test_bidirdict.py  test_distinguishedname.py  test_ldapfilter.py  test_ldapsyntax.py  test_pureber.py  test_pureldap.py
(+77 files in other folders)
