[metadata]
name = ldaptor
description = A Pure-Python Twisted library for LDAP
long_description = file: README.rst
author = Tommi Virtanen
author_email = tv@eagain.net
maintainer = Bret Curtis
maintainer_email = psi29a@gmail.com
url = https://github.com/twisted/ldaptor
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Framework :: Twisted
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP

[options]
python_requires = ~=3.5
install_requires =
    passlib
    Twisted[tls]>=15.5.0
    pyparsing
    six >= 1.7
    zope.interface
packages = find:
scripts =

[options.extras_require]
docs =
  alabaster~=0.7.12
  commonmark~=0.9.1
  docutils~=0.16.0
  mock~=4.0
  pillow~=7.2
  readthedocs-sphinx-ext~=2.1
  recommonmark~=0.6.0
  sphinx~=3.2
  sphinx-rtd-theme~=0.5.0

[options.entry_points]
console_scripts =
    ldaptor-ldap2dhcpconf = ldaptor.scripts.ldap2dhcpconf:console_script
    ldaptor-ldap2maradns = ldaptor.scripts.ldap2maradns:console_script
    ldaptor-ldap2dnszones = ldaptor.scripts.ldap2dnszones:console_script
    ldaptor-search = ldaptor.scripts.search:console_script
    ldaptor-namingcontexts = ldaptor.scripts.namingcontexts:console_script
    ldaptor-passwd = ldaptor.scripts.passwd:console_script
    ldaptor-ldap2passwd = ldaptor.scripts.ldap2passwd:console_script
    ldaptor-getfreenumber = ldaptor.scripts.getfreenumber:console_script
    ldaptor-ldap2pdns = ldaptor.scripts.ldap2pdns:console_script
    ldaptor-find-server = ldaptor.scripts.find_server:console_script
    ldaptor-rename = ldaptor.scripts.rename:console_script
    ldaptor-fetchschema = ldaptor.scripts.fetchschema:console_script
    ldaptor-ldifdiff = ldaptor.scripts.ldifdiff:console_script
    ldaptor-ldifpatch = ldaptor.scripts.ldifpatch:console_script


[bdist_wheel]
universal = 1


[zest.releaser]
python-file-with-version = ldaptor/__init__.py
history-file = docs/source/NEWS.rst
tag-format = v{version}


[flake8]
disable-noqa = True
max-line-length = 368
extend-ignore =
   E203,  # whitespace before : is not PEP8 compliant (& conflicts with black)

   E101,  # indentation contains mixed spaces and tabs
   E265,  # block comment should start with '# '
   E401,  # multiple imports on one line
   E402,  # module level import not at top of file
   E713,  # test for membership should be 'not in'
   E741,  # ambiguous variable name 'l'
   E743,  # ambiguous function definition 'l'
   W191,  # indentation contains tabs
   W291,  # trailing whitespace
   W601,  # .has_key() is deprecated, use 'in'
